--- a/Yang/README
+++ b/Yang/README
@@ -30,5 +30,5 @@ enabledinterfaces.py
 Counts the number of enabled interface on a device
 
 get_ietf_unicast_routing.py
-
+Saves YANG model for routing
 
